[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Item.gd" type="Script" id=1]
[ext_resource path="res://assets/items/bomb.png" type="Texture" id=2]
[ext_resource path="res://assets/items/expand_bomb.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 6.40976

[node name="Item" type="Area2D" index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="BombSprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.94565, 1.8646 )
scale = Vector2( 0.0368937, 0.0368937 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="ExpandBombSprite" type="Sprite" parent="." index="1"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.0242558, -0.0242596 )
scale = Vector2( 0.0336544, 0.0336544 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="Tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


